fix editor tabs problems like scroll and text overflows

--- a/src/components/editor/sass/tabs.scss
+++ b/src/components/editor/sass/tabs.scss
@@ -1,10 +1,15 @@
 .tabs-container {
     height: 30px;
     background-color: #101010;
-    overflow-x: auto;
-    overflow-y: hidden;
 
     .tabs {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        flex-wrap: nowrap;
+        width: auto;
+        overflow-x: scroll;
+
         .tab-container {
             height: 30px;
             background-color: #0007;
@@ -25,10 +30,20 @@
             }
 
             .tab {
-                display: flex;
-                align-items: center;
                 height: 100%;
                 padding: 0 20px;
+                max-width: 200px;
+                white-space: nowrap;
+                overflow: hidden;
+
+                span {
+                    display: grid;
+                    place-items: center;
+                    height: 100%;
+                    width: 100%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                }
             }
         }
 
